--- a/README.Rmd
+++ b/README.Rmd
@@ -2,7 +2,9 @@
 title: "README"
 author: "Mikko Salonen"
 date: "19 January 2017"
-output: html_document
+output: 
+  html_document:  
+    theme: flatly
 ---
 
 ### Description of the course
