--- a/chapter1.Rmd
+++ b/chapter1.Rmd
@@ -4,6 +4,7 @@ author: "Mikko Salonen"
 output: html_document
 ---
 # About the project
+This is the start of my course diary. Updates coming soon.
 
 ### Description of the course
 In this course I will learn about:
